--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,5 @@
-$base-color: #c6538c;
+$base-color: #696969;
+$gainsboro: #DCDCDC;
+$lightSlateGray: #9facb9;
+$darkSlateGray: #2F4F4F;
+$black: #1a1a1a;
